--- a/src/Components/ServiceProvider/ServiceProvider.css
+++ b/src/Components/ServiceProvider/ServiceProvider.css
@@ -29,11 +29,11 @@
 }
 .serviceProvider_left button{
     border: none;
-    padding: 10px 25px;
+    padding: 5px 20px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    font-size: 18px;
-    background-color: #BEAEE2;
+    font-size: 17px;
+    background-color: #F7DBF0;
     border-radius: 3px;
 }
 .serviceProvider_left span{
