--- a/src/Components/Pages/Register/Register.css
+++ b/src/Components/Pages/Register/Register.css
@@ -7,6 +7,7 @@
     margin: 0px auto;
     width: 40%;
     padding: 30px 30px 30px;
+    box-shadow: -1px 1px 9px 0px rgba(0,0,0,0.75);
 }
 .inputField input:focus{
     outline: none;
