--- a/src/Components/Pages/Shared/Topbar.css
+++ b/src/Components/Pages/Shared/Topbar.css
@@ -3,6 +3,6 @@
     color: #000;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    font-size: 20px;
-    padding-left: 25px;
+    font-size: 18px;
+    padding: 0px 10px;
 }
