--- a/src/Inventory/DisplayBooks/DisplayBooks.css
+++ b/src/Inventory/DisplayBooks/DisplayBooks.css
@@ -31,6 +31,20 @@
     background-color: #F7DBF0;
     border-radius: 3px;
 }
+.manage_button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.manage_button button{
+    border: none;
+    padding: 5px 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 17px;
+    background-color: #BEAEE2;
+    border-radius: 3px;
+}
 .displayBooks{
     margin:  15px;
 }
