--- a/src/Components/ServiceProvider/ServiceProvider.css
+++ b/src/Components/ServiceProvider/ServiceProvider.css
@@ -39,3 +39,12 @@
 .serviceProvider_left span{
     color: #BEAEE2;
 }
+
+/*--------------apply media query-------------*/
+@media (min-width: 992px) and (max-width: 1199px){}
+@media (min-width: 768px) and (max-width: 991.98px){}
+@media (min-width: 576px) and (max-width: 767.98px){}
+@media (max-width: 575.98px){
+    
+}
+/*--------------apply media query-------------*/
