--- a/src/Components/Pages/Register/Register.css
+++ b/src/Components/Pages/Register/Register.css
@@ -1,18 +1,21 @@
-#register{
+#register {
     background-color: #F9F9F9;
     padding: 100px 0px;
 }
-.signUp_area{
+
+.signUp_area {
     background-color: #fff;
     margin: 0px auto;
     width: 40%;
     padding: 30px 30px 30px;
-    box-shadow: -1px 1px 9px 0px rgba(0,0,0,0.75);
+    box-shadow: -1px 1px 9px 0px rgba(0, 0, 0, 0.75);
 }
-.inputField input:focus{
+
+.inputField input:focus {
     outline: none;
 }
-.inputField input:not([type=checkbox]){
+
+.inputField input:not([type=checkbox]) {
     display: block;
     border: 1px solid transparent;
     width: 100%;
@@ -24,23 +27,54 @@
     border-radius: 3px;
     background-color: rgba(247, 219, 240, 0.239);
 }
-.signUp_area h2{
+
+.signUp_area h2 {
     font-family: 'Poppins', sans-serif;
     font-size: 25px;
     font-weight: 600;
 }
-.signUp_area p{
+
+.signUp_area p {
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 15px;
 }
-#submit{
+
+#submit {
     background-color: #F7DBF0;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     font-weight: 600;
     letter-spacing: 1px;
 }
-.hr_width{
+
+.hr_width {
     width: 100%;
 }
+
+/*--------------apply media query-------------*/
+@media (min-width: 992px) and (max-width: 1199px) {
+    .signUp_area {
+        width: 50%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .signUp_area {
+        width: 70%;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+    .signUp_area {
+        width: 80%;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .signUp_area {
+        width: 80%;
+    }
+}
+
+/*--------------apply media query-------------*/
