--- a/src/Components/Pages/Shared/Footer/Footer.css
+++ b/src/Components/Pages/Shared/Footer/Footer.css
@@ -23,6 +23,7 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 15px;
+    text-align: justify;
     padding-top: 20px;
     width: 280px;
 }
@@ -47,10 +48,10 @@ li {
     width: 100%;
 }
 
-.inputField input {
+.inputField input:not([type=checkbox]) {
     display: block;
     border: 1px solid transparent;
-    width: 100%;
+    width: 25%;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 14px;
@@ -68,3 +69,69 @@ li {
     margin: 0px 10px;
     border-radius: 3px;
 }
+
+/*--------------apply media query-------------*/
+@media (min-width: 992px) and (max-width: 1199px) {
+    .footer_items {
+        flex-direction: column;
+    }
+
+    .footer_space {
+        margin-top: 20px;
+    }
+
+    .footer_text p {
+        width: 100%
+    }
+
+    .inputField  {
+        width: 400px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .footer_items {
+        flex-direction: column;
+    }
+
+    .footer_space {
+        margin-top: 20px;
+    }
+    .inputField  {
+        width: 400px;
+    }
+
+    .footer_text p {
+        width: 100%
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+    .footer_items {
+        flex-direction: column;
+    }
+
+    .footer_space {
+        margin-top: 20px;
+    }
+
+    .footer_text p {
+        width: 100%
+    }
+}
+
+@media (max-width: 575.98px) {
+    .footer_items {
+        flex-direction: column;
+    }
+
+    .footer_space {
+        margin-top: 20px;
+    }
+
+    .footer_text p {
+        width: 100%
+    }
+}
+
+/*--------------apply media query-------------*/
