--- a/src/Components/ServiceProvider/ServiceProvider.css
+++ b/src/Components/ServiceProvider/ServiceProvider.css
@@ -1,4 +1,6 @@
-
+.serviceProvider_parent{
+    display: flex;
+}
 #serviceProvider{
     padding: 100px 0px;
 }
@@ -42,9 +44,28 @@
 
 /*--------------apply media query-------------*/
 @media (min-width: 992px) and (max-width: 1199px){}
-@media (min-width: 768px) and (max-width: 991.98px){}
-@media (min-width: 576px) and (max-width: 767.98px){}
+@media (min-width: 768px) and (max-width: 991.98px){
+    .serviceProvider_parent{
+        flex-direction: column;
+    }
+    .serviceProvider_right{
+        padding-top: 50px;
+    }
+}
+@media (min-width: 576px) and (max-width: 767.98px){
+    .serviceProvider_parent{
+        flex-direction: column;
+    }
+    .serviceProvider_right{
+        padding-top: 50px;
+    }
+}
 @media (max-width: 575.98px){
-    
+    .serviceProvider_parent{
+        flex-direction: column;
+    }
+    .serviceProvider_right{
+        padding-top: 50px;
+    }
 }
 /*--------------apply media query-------------*/
