--- a/src/Inventory/Inventory.css
+++ b/src/Inventory/Inventory.css
@@ -36,3 +36,25 @@
     font-size: 15px;
     padding-top: 30px;
 }
+/*--------------apply media query-------------*/
+@media (min-width: 992px) and (max-width: 1199px){
+    .book {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media (min-width: 768px) and (max-width: 991.98px){
+    .book {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media (min-width: 576px) and (max-width: 767.98px){
+    .book {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+@media (max-width: 575.98px){
+    .book {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+/*--------------apply media query-------------*/
